--- a/demo/paper-page/index.html
+++ b/demo/paper-page/index.html
@@ -15,6 +15,23 @@
 		var __adobewebfontsappname__="dreamweaver"
 		</script>
 
+		<meta name="twitter:cars" content="summary" />
+		<meta name="twitter:title" content="Feuilles" />
+		<meta name="twitter:image" content="http://cedced19.github.io/profile.png" />
+		<meta name="twitter:site" content="@cedced19" />
+		<meta name="twitter:author" content="@cedced19" />
+		<meta name="twitter:description" content="Un site avec un beau css." />
+
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Feuilles" />
+		<meta property="og:image" content="http://cedced19.github.io/profile.png" />
+		<meta property="og:language" content="fr_FR">
+		<meta property="og:url" content="http://cedced19.github.io/demo/paper-page/" />
+		<meta property="og:description" content="Un site avec un beau css." />
+
+		<link href="https://plus.google.com/104855167193751168501/" rel="publisher" />
+		<meta name="description" content="Un site avec un beau css." />
+
 	</head>
 	<body>
 		<div class="feuilles">
@@ -28,5 +45,15 @@
 				Bon, a plus !
 			</p>
 		</div>
+		<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-49736522-1', 'cedced19.github.io');
+		ga('send', 'pageview');
+
+		</script>
 	</body>
 </html>
