--- a/latin/5/index.html
+++ b/latin/5/index.html
@@ -1,13 +1,13 @@
 <html>
 
 <head>
-<meta charset="utf-8"> 
+<meta charset="utf-8">
 <link href="../bootstrap.css" rel="stylesheet">
-<link href="../s.css" rel="stylesheet"> 
-<link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" /> 
-<link rel="icon" type="image/x-icon" href="../favicon.ico" /> 
+<link href="../s.css" rel="stylesheet">
+<link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
+<link rel="icon" type="image/x-icon" href="../favicon.ico" />
 <script src="../jquery.js"></script>
-<script src="../rollbox.js"></script> 
+<script src="../rollbox.js"></script>
 <script src="../bootstrap.min.js"></script>
 <title>5&egrave;me D&eacute;clinaison</title>
 <!--[if lt IE 9]>
@@ -26,7 +26,7 @@
 <meta property="og:language" content="fr_FR">
 <meta property="og:url" content="http://cedced19.github.io/latin/5/" />
 <meta property="og:description" content="Un site pour apprendre le latin !" />
-        
+
 <link href="https://plus.google.com/104855167193751168501/" rel="publisher" />
 <meta name="description" content="Un site pour apprendre le latin !" />
 <script>
@@ -48,7 +48,7 @@ var tempsRestant = 0 ;
 messageBon = new Array() ; //tu peux ajouter des messages de felicitation
 messageBon[0] = 'Bravo !' ;
 messageBon[1] = 'Bien joue !' ;
-messageBon[2] = 'Trss fort !' ;
+messageBon[2] = 'Tres fort !' ;
 messageFaux = new Array() ; //et la aussi
 messageFaux[0] = 'Dommage !' ;
 messageFaux[1] = 'Mauvaise reponse !' ;
@@ -321,20 +321,20 @@ function bonus(){
 <div id="bilan"></div>
 
 <div id="haut">
-			<br>  
+			<br>
         	<button align="center" data-toggle="modal" href="#aide" class="btn btn-primary">Auxilium (aide)</button>
 </div>
 <form name="quizz" action="javascript:repondre();">
-  <div align="center"> 
+  <div align="center">
     <p>&nbsp; </p>
   </div>
   <div id="commencer" style="display:block;">
-    <div align="center"> 
-            <div align="center"><span class="blanc"><font size="1">Choisissez 
-              en cliquant dessus un temps pour repondre (en secondes) :</font></span> 
-              <font size="2"><span class="main btn btn-danger" id="tmps10" onClick="temps(10);">10</span> 
-               <span class="main btn btn-warning" id="tmps15" onClick="temps(15);">15</span> 
-               <span class="main btn btn-info" id="tmps20" onClick="temps(20);">20</span> 
+    <div align="center">
+            <div align="center"><span class="blanc"><font size="1">Choisissez
+              en cliquant dessus un temps pour repondre (en secondes) :</font></span>
+              <font size="2"><span class="main btn btn-danger" id="tmps10" onClick="temps(10);">10</span>
+               <span class="main btn btn-warning" id="tmps15" onClick="temps(15);">15</span>
+               <span class="main btn btn-info" id="tmps20" onClick="temps(20);">20</span>
                <span class="main btn btn-success" id="tmps25" onClick="temps(25);">25</span></font></div>
       <div align="center"><br>
         <input type="button" value="Incipe ! (commencer)" onclick="commencer();" class="btn btn-success">
@@ -348,10 +348,10 @@ function bonus(){
     	<input type="text" name="r" style="width: 250px;" class="form-control">
     	<input type="submit" value="OK" class="btn btn-success">
     </div>
-    
-    &nbsp;&nbsp;&nbsp;<span id="barreTemps"><span id="decompte"></span></span> 
+
+    &nbsp;&nbsp;&nbsp;<span id="barreTemps"><span id="decompte"></span></span>
   </div>
-  <div id="bas" style="display: none;" align="center"> 
+  <div id="bas" style="display: none;" align="center">
     <input type="button" class="bouton btn btn-success" onclick="self.location=self.location;" value="Recommencer">
     <input type="button" class="bouton btn btn-success" onclick="voirErreurs();" value="Voir les erreurs" name="boutonErreurs">
     <div id="mesErreurs" align="center"><br>
@@ -366,6 +366,7 @@ function bonus(){
 	<div class="island social">
 		<a data-tip="&hearts;" class="bttnt tweet" href="http://twitter.com/share?url=http://cedced19.github.io/latin/5/&text=Latin by @cedced19 :"><img src="../birdy.png" width="50" height="50" /></a>
 		<a data-tip="&hearts;" class="bttng google" href="https://plus.google.com/share?url=http%3A%2F%2Fcedced19.github.io%2Flatin%2F5%2F&hl=fr"><img src="../google.png" width="50" height="50" /></a>
+		<a data-tip="&hearts;" class="bttnf facebook" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fcedced19.github.io%2Flatin%2F5%2F"><img src="../facebook.png" width="50" height="50" /></a>
 	</div>
 </footer>
 
@@ -378,7 +379,7 @@ function bonus(){
         <h4 class="modal-title" style="color:#000;">Aide</h4>
       </div>
       <div class="modal-body">
-        <img src="aide.png" height="180" width="250"> 
+        <img src="aide.png" height="180" width="250">
       </div>
     </div>
   </div>
@@ -392,7 +393,7 @@ function bonus(){
 	</div>
 	<div>
 		Je pense que la version 2001 de Gratum Studium est un peu veille alors il y en a une nouvelle.
-		Allez voir le projet d'origine Gratum Studium. 
+		Allez voir le projet d'origine Gratum Studium.
 	</div>
 	<a href="http://cedced19.github.io/latin/">Menu principal</a>
 </div>
