--- a/proto/index.html
+++ b/proto/index.html
@@ -23,7 +23,7 @@
 	<meta name="description" content="Un site pour coder en html/css !" />
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="s.css">
-	<script type="text/javascript" src="//use.typekit.net/kxs7tky.js"></script>
+	<script type="text/javascript" src="http://cedced19.github.io/scripts/kxs7tky.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
