--- a/latin/4/index.html
+++ b/latin/4/index.html
@@ -11,7 +11,7 @@
 <script src="../bootstrap.min.js"></script>
 <title>4&egrave;me D&eacute;clinaison</title>
 <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="http://cedced19.github.io/scripts/ie.js"></script>
 <![endif]-->
 <meta name="twitter:cars" content="summary" />
 <meta name="twitter:title" content="4&egrave;me D&eacute;clinaison" />
