--- a/proto/index.html
+++ b/proto/index.html
@@ -70,7 +70,7 @@ Exemple CSS:
 	</div>
 
 </body>
-<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script src="http://cedced19.github.io/scripts/jquery.min.js"></script>
 <script>
 (function() {
 	var	contents = $('iframe').contents(),
