--- a/proto/index.html
+++ b/proto/index.html
@@ -11,14 +11,14 @@
 	<meta name="twitter:site" content="@cedced19" />
 	<meta name="twitter:author" content="@cedced19" />
 	<meta name="twitter:description" content="Un site pour coder en html/css !" />
-	
+
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Prototype" />
 	<meta property="og:image" content="http://cedced19.github.io/profile.png" />
 	<meta property="og:language" content="fr_FR">
 	<meta property="og:url" content="http://cedced19.github.io/proto/" />
 	<meta property="og:description" content="Un site pour coder en html/css !" />
-	        
+
 	<link href="https://plus.google.com/104855167193751168501/" rel="publisher" />
 	<meta name="description" content="Un site pour coder en html/css !" />
 	<!-- Stylesheets -->
@@ -62,9 +62,11 @@ Exemple CSS:
 		</div>
 	</section>
 	<br><br>
-	<div class="island tweetThis">
-		<a data-tip="&hearts;" class="bttn tweet" href="http://twitter.com/share?url=http://cedced19.github.io/proto&text=Prototype by @cedced19 :"><img src="birdy.png" width="50" height="50" /></a>
-	</div>
+	   <div class="island social">
+                <a data-tip="&hearts;" class="bttnt tweet" href="http://twitter.com/share?url=http://cedced19.github.io/proto/&text=Latin by @cedced19 :"><img src="birdy.png" width="50" height="50" /></a>
+                <a data-tip="&hearts;" class="bttng google" href="https://plus.google.com/share?url=http%3A%2F%2Fcedced19.github.io%2Fproto%2F&hl=fr"><img src="google.png" width="50" height="50" /></a>
+                <a data-tip="&hearts;" class="bttnf facebook" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fcedced19.github.io%2Fproto%2F"><img src="facebook.png" width="50" height="50" /></a>
+               </div>
 	<div class="island footer">
 		<p>Créer par <a href="https://cedced19.github.io">Cedced19</a>.</p>
 	</div>
