--- a/latin/1/index.html
+++ b/latin/1/index.html
@@ -379,7 +379,90 @@ function bonus(){
         <h4 class="modal-title" style="color:#000;">Aide</h4>
       </div>
       <div class="modal-body">
-        <img src="aide.png" height="180" width="250">
+        <table width="36%" border="1">
+    <tr bgcolor="#9999FF">
+      <td colspan="2">
+        <div align="center"><font face="Verdana, Arial, Helvetica, sans-serif"><b><font color="#FFF">SINGULIER</font></b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Nominatif</font></td>
+      <td bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAUS</b></font><font color="#FF0033" face="Verdana, Arial, Helvetica, sans-serif"><b>A</b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Vocatif</font></td>
+      <td bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAUS</b></font><font face="Verdana, Arial, Helvetica, sans-serif"><b><font color="#FF0033">A</font></b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Accusatif</font></td>
+      <td bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAUS</b></font><font face="Verdana, Arial, Helvetica, sans-serif"><b><font color="#FF0033">AM</font></b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">G&eacute;nitif</font></td>
+      <td bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAUS</b></font><font face="Verdana, Arial, Helvetica, sans-serif"><b><font color="#FF0033">AE</font></b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Datif</font></td>
+      <td bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAUS</b></font><font face="Verdana, Arial, Helvetica, sans-serif"><b><font color="#FF0033">AE</font></b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Ablatif</font></td>
+      <td bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAUS</b></font><font face="Verdana, Arial, Helvetica, sans-serif"><b><font color="#FF0033">A</font></b></font></div>
+      </td>
+    </tr>
+    <tr bgcolor="#9999FF">
+      <td colspan="2">
+        <div align="center"><font color="#FFF" face="Verdana, Arial, Helvetica, sans-serif"><b>PLURIEL</b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Nominatif</font></td>
+      <td bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAUS</b></font><font face="Verdana, Arial, Helvetica, sans-serif"><b><font color="#FF0033">AE</font></b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Vocatif</font></td>
+      <td bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAUS</b></font><font face="Verdana, Arial, Helvetica, sans-serif" color="#FF0033"><b>AE</b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Accusatif</font></td>
+      <td bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAUS</b></font><font face="Verdana, Arial, Helvetica, sans-serif" color="#FF0033"><b>AS</b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">G&eacute;nitif</font></td>
+      <td bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAUS</b></font><font face="Verdana, Arial, Helvetica, sans-serif" color="#FF0033"><b>ARUM</b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Datif</font></td>
+      <td bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAUS</b></font><font face="Verdana, Arial, Helvetica, sans-serif" color="#FF0033"><b>IS</b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Ablatif</font></td>
+      <td bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAUS</b></font><font color="#FF0033" face="Verdana, Arial, Helvetica, sans-serif"></font><font face="Verdana, Arial, Helvetica, sans-serif" color="#FF0033"><b>IS</b></font></div>
+      </td>
+    </tr>
+  </table>
       </div>
     </div>
   </div>
