--- a/latin/all/index.html
+++ b/latin/all/index.html
@@ -9,7 +9,7 @@
 <script src="../jquery.js"></script>
 <script src="../rollbox.js"></script>
 <script src="../bootstrap.min.js"></script>
-<title>4&egrave;me D&eacute;clinaison</title>
+<title>Toutes D&eacute;clinaison</title>
 <!--[if lt IE 9]>
 <script src="http://cedced19.github.io/scripts/ie.js"></script>
 <![endif]-->
@@ -352,7 +352,7 @@ score += 1.5 ;
         <h4 class="modal-title" style="color:#000;">Aide</h4>
       </div>
       <div class="modal-body">
-        <img src="aide.png" height="180" width="250">
+        <img src="aide.png" height="1500" width="550">
       </div>
     </div>
   </div>
@@ -361,7 +361,8 @@ score += 1.5 ;
 <div class="rollbox">
 <h2>A propos...</h2>
 <div>
-Objectif : decliner le plus rapidement un mot !
+Objectif : decliner le plus rapidement un mot !<br>
+Attention ! Il y a toutes les declinaisons aussi !
 </div>
 <div>
 Je pense que la version 2001 de Gratum Studium est un peu veille alors il y en a une nouvelle.
