--- a/latin/4/index.html
+++ b/latin/4/index.html
@@ -368,7 +368,126 @@ function bonus(){
         <h4 class="modal-title" style="color:#000;">Aide</h4>
       </div>
       <div class="modal-body">
-        <img src="aide.png" height="180" width="250">
+        <table width="48%" border="1">
+    <tr bgcolor="#9999FF">
+      <td colspan="3">
+        <div align="center"><font face="Verdana, Arial, Helvetica, sans-serif"><b><font color="#FFF">SINGULIER</font></b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Nominatif</font></td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAS</b></font><font color="#FF0033" face="Verdana, Arial, Helvetica, sans-serif"><b>US</b></font></div>
+      </td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CORN<font color="#FF0033">U</font></b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Vocatif</font></td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAS</b></font><font color="#FF0033" face="Verdana, Arial, Helvetica, sans-serif"><b>US</b></font></div>
+      </td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font face="Verdana, Arial, Helvetica, sans-serif"><b><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CORN<font color="#FF0033">U</font></b></font><font color="#0000CC"><b></b></font></b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Accusatif</font></td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAS</b></font><font color="#FF0033" face="Verdana, Arial, Helvetica, sans-serif"><b>UM</b></font></div>
+      </td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font face="Verdana, Arial, Helvetica, sans-serif"><b><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CORN<font color="#FF0033">U</font></b></font><font color="#0000CC"><b></b></font></b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">G&eacute;nitif</font></td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAS</b></font><font color="#FF0033" face="Verdana, Arial, Helvetica, sans-serif"><b>US</b></font></div>
+      </td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font face="Verdana, Arial, Helvetica, sans-serif"><b><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CORN<font color="#FF0033">US</font></b></font><font color="#0000CC"><b></b></font></b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Datif</font></td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAS</b></font><font color="#FF0033" face="Verdana, Arial, Helvetica, sans-serif"><b>UI</b></font></div>
+      </td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font face="Verdana, Arial, Helvetica, sans-serif"><b><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CORN<font color="#FF0033">UI</font></b></font><font color="#0000CC"></font></b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Ablatif</font></td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAS</b></font><font color="#FF0033" face="Verdana, Arial, Helvetica, sans-serif"><b>U</b></font></div>
+      </td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font face="Verdana, Arial, Helvetica, sans-serif"><b><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CORN<font color="#FF0033">U</font></b></font><font color="#0000CC"><b></b></font></b></font></div>
+      </td>
+    </tr>
+    <tr bgcolor="#9999FF">
+      <td colspan="3">
+        <div align="center"><font color="#FFF" face="Verdana, Arial, Helvetica, sans-serif"><b>PLURIEL</b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Nominatif</font></td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAS</b></font><font color="#FF0033" face="Verdana, Arial, Helvetica, sans-serif"><b>US</b></font></div>
+      </td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CORN<font color="#FF0033">UA</font></b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Vocatif</font></td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAS</b></font><font color="#FF0033" face="Verdana, Arial, Helvetica, sans-serif"><b>US</b></font></div>
+      </td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CORN<font color="#FF0033">UA</font></b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Accusatif</font></td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAS</b></font><font color="#FF0033" face="Verdana, Arial, Helvetica, sans-serif"><b>US</b></font></div>
+      </td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CORN<font color="#FF0033">UA</font></b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">G&eacute;nitif</font></td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAS</b></font><font color="#FF0033" face="Verdana, Arial, Helvetica, sans-serif"><b>UUM</b></font></div>
+      </td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CORN<font color="#FF0033">UUM</font></b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Datif</font></td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAS</b></font><font color="#FF0033" face="Verdana, Arial, Helvetica, sans-serif"><b>IBUS</b></font></div>
+      </td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CORN<font color="#FF0033">IBUS</font></b></font></div>
+      </td>
+    </tr>
+    <tr>
+      <td width="24%" bgcolor="#9999FF"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Ablatif</font></td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CAS</b></font><font color="#FF0033" face="Verdana, Arial, Helvetica, sans-serif"><b>IBUS</b></font></div>
+      </td>
+      <td width="38%" bgcolor="#FFF">
+        <div align="center"><font color="#0000CC" face="Verdana, Arial, Helvetica, sans-serif"><b>CORN<font color="#FF0033">IBUS</font></b></font></div>
+      </td>
+    </tr>
+  </table>
       </div>
     </div>
   </div>
