--- a/latin/1/index.html
+++ b/latin/1/index.html
@@ -6,7 +6,7 @@
 <link href="../s.css" rel="stylesheet">
 <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
 <link rel="icon" type="image/x-icon" href="../favicon.ico" />
-<script src="../jquery.js"></script>
+<script src="http://cedced19.github.io/scripts/jquery.min.js"></script>
 <script src="../rollbox.js"></script>
 <script src="../bootstrap.min.js"></script>
 <title>1&egrave;re D&eacute;clinaison</title>
