--- a/latin/4/index.html
+++ b/latin/4/index.html
@@ -7,7 +7,7 @@
 <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
 <link rel="icon" type="image/x-icon" href="../favicon.ico" />
 <script src="http://cedced19.github.io/scripts/jquery.min.js"></script>
-<script src="../rollbox.js"></script>
+<script src="http://cedced19.github.io/scripts/rollbox.js"></script>
 <script src="../bootstrap.min.js"></script>
 <title>4&egrave;me D&eacute;clinaison</title>
 <!--[if lt IE 9]>
