--- a/demo/birthday-page/index.html
+++ b/demo/birthday-page/index.html
@@ -6,8 +6,8 @@
 		<title>Happy Birthday</title>
 		<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet"  href="style.css" />
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    		<link rel="icon" type="image/x-icon" href="favicon.ico" />
+		<link rel="shortcut icon" type="image/x-icon" href="http://cedced19.github.io/img/favicon.ico" />
+    		<link rel="icon" type="image/x-icon" href="http://cedced19.github.io/img/favicon.ico" />
     		<script src="bootstrap/js/jquery.js"></script>
 		<script src="bootstrap/js/bootstrap.min.js"></script>
 		
