--- a/demo/countdown-page/index.html
+++ b/demo/countdown-page/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>Countdown</title>
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-<link rel="icon" type="image/x-icon" href="favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="http://cedced19.github.io/img/favicon.ico" />
+<link rel="icon" type="image/x-icon" href="http://cedced19.github.io/img/favicon.ico" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <meta name="twitter:cars" content="summary" />
