--- a/demo/download-page/index.html
+++ b/demo/download-page/index.html
@@ -31,8 +31,8 @@
 		<link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
 		<link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
 		<link href="css/style.css" rel="stylesheet">
-		<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
-        	<link rel="icon" type="image/x-icon" href="img/favicon.ico" />
+		<link rel="shortcut icon" type="image/x-icon" href="http://cedced19.github.io/img/favicon.ico" />
+        	<link rel="icon" type="image/x-icon" href="http://cedced19.github.io/img/favicon.ico" />
 		
 		<!-- Javascripts -->
 		<script src="js/jquery-1.9.1.min.js"></script>
