--- a/latin/all/index.html
+++ b/latin/all/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <link href="../bootstrap.css" rel="stylesheet">
 <link href="../s.css" rel="stylesheet">
-<link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
-<link rel="icon" type="image/x-icon" href="../favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="http://cedced19.github.io/img/favicon.ico" />
+<link rel="icon" type="image/x-icon" href="http://cedced19.github.io/img/favicon.ico" />
 <script src="http://cedced19.github.io/scripts/jquery.min.js"></script>
 <script type="text/javascript" src="http://cedced19.github.io/scripts/jquery.min.js"></script>
 <script type="text/javascript">
