--- a/home/index.html
+++ b/home/index.html
@@ -42,6 +42,13 @@
 				<button id="clear-completed">Supprimer les taches effectue</button>
 			</footer>
 		</section>
+		<footer id="info">
+				<p>J'ai cree cette page car je trouvais que les pages d'acceuilles avec de la pub c'est horrible.<br>
+				Imaginez, vous vous reveillez avec une page avec de la pub et vous vous couchez avec !<br>
+				Elle ajoute aussi une liste de taches a faire.<br>
+				Ajoutez la en temps que page d'acceuilles.</p>
+				<p>Cedced19 - <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons By Attribution 4.0</a></p>
+		</footer>
 		<script type="text/javascript" src="bower_components/todomvc-common/base.js"></script>
 		<script type="text/javascript" src="js/helpers.js"></script>
 		<script type="text/javascript" src="js/store.js"></script>
@@ -55,10 +62,10 @@
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-		
+
 		  ga('create', 'UA-49736522-1', 'cedced19.github.io');
 		  ga('send', 'pageview');
-		
+
 		</script>
 	</body>
 </html>
