--- a/home/index.html
+++ b/home/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en" data-framework="javascript">
+<html lang="fr" data-framework="javascript">
 	<head>
 		<meta charset="utf-8">
 		<title>Home C</title>
-		<link rel="stylesheet" href="bower_components/todomvc-common/base.css">
+		<link rel="stylesheet" href="s.css">
 		<link rel="shortcut icon" href="http://cedced19.github.io/img/favicon.ico" type="image/x-icon" />
-        	<link rel="icon" href="http://cedced19.github.io/img/favicon.ico" type="image/x-icon" />
+        		<link rel="icon" href="http://cedced19.github.io/img/favicon.ico" type="image/x-icon" />
 	</head>
 	<body>
 		<section id="google">
@@ -49,7 +49,6 @@
 				Ajoutez la en temps que page d'acceuilles.</p>
 				<p>Cedced19 - <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons By Attribution 4.0</a></p>
 		</footer>
-		<script type="text/javascript" src="bower_components/todomvc-common/base.js"></script>
 		<script type="text/javascript" src="js/helpers.js"></script>
 		<script type="text/javascript" src="js/store.js"></script>
 		<script type="text/javascript" src="js/model.js"></script>
