--- a/home/index.html
+++ b/home/index.html
@@ -2,31 +2,13 @@
 <html lang="fr" data-framework="javascript">
 	<head>
 		<meta charset="utf-8">
-		<title>Home C | Une page d'acceuille pour navigateur web sans pub</title>
+		<title>Home C</title>
 		<link rel="stylesheet" href="s.css">
 		<link rel="shortcut icon" href="http://cedced19.github.io/img/favicon.ico" type="image/x-icon" />
-        	<link rel="icon" href="http://cedced19.github.io/img/favicon.ico" type="image/x-icon" />
-		<!--[if lt IE 9]>
-		    <script src="http://cedced19.github.io/scripts/ie.js"></script>
-		<![endif]-->
-		<meta name="twitter:cars" content="summary" />
-		<meta name="twitter:title" content="Home C" />
-		<meta name="twitter:image" content="http://cedced19.github.io/profile.png" />
-		<meta name="twitter:site" content="@cedced19" />
-		<meta name="twitter:author" content="@cedced19" />
-		<meta name="twitter:description" content="Un site pour apprendre le latin !" />
-		
-		<meta property="og:type" content="website" />
-		<meta property="og:title" content="Home C" />
-		<meta property="og:image" content="http://cedced19.github.io/profile.png" />
-		<meta property="og:language" content="fr_FR">
-		<meta property="og:url" content="http://cedced19.github.io/homr/" />
-		<meta property="og:description" content="Un site pour apprendre le latin !" />
-		
-		<link href="https://plus.google.com/104855167193751168501/" rel="publisher" />
-		<meta name="description" content="Une page d'acceuille pour navigateur web sans pub !" />
+        		<link rel="icon" href="http://cedced19.github.io/img/favicon.ico" type="image/x-icon" />
 	</head>
 	<body>
+		<a href="https://mail.google.com" >Gmail</a>
 		<section id="google">
 			<header id="header">
 					<h1>Recherches :</h1>
