--- a/home/index.html
+++ b/home/index.html
@@ -49,6 +49,10 @@
 				Elle ajoute aussi une liste de taches a faire.<br>
 				Ajoutez la en temps que page d'acceuilles.</p>
 				<p>Cedced19 - <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons By Attribution 4.0</a></p>
+				<p><a href="http://twitter.com/share?url=http://cedced19.github.io/home/&text=Latin by @cedced19 :">Partager sur Twitter</a>
+				<a href="https://plus.google.com/share?url=http%3A%2F%2Fcedced19.github.io%2Fhomr%2F&hl=fr">Partager sur Google +</a>
+				<a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fcedced19.github.io%2Fhome%2F">Partager sur Facebook</a>
+				</p>
 		</footer>
 		<script type="text/javascript" src="js/helpers.js"></script>
 		<script type="text/javascript" src="js/store.js"></script>
