--- a/home/index.html
+++ b/home/index.html
@@ -44,14 +44,11 @@
 			</footer>
 		</section>
 		<footer id="info">
-				<p>J'ai cree cette page car je trouvais que les pages d'acceuilles avec de la pub c'est horrible.<br>
-				Imaginez, vous vous reveillez avec une page avec de la pub et vous vous couchez avec !<br>
-				Elle ajoute aussi une liste de taches a faire.<br>
-				Ajoutez la en temps que page d'acceuilles.</p>
 				<p><a href="http://twitter.com/share?url=http://cedced19.github.io/home/&text=Latin by @cedced19 :">Partager sur Twitter</a><br>
 				<a href="https://plus.google.com/share?url=http%3A%2F%2Fcedced19.github.io%2Fhomr%2F&hl=fr">Partager sur Google +</a><br>
 				<a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fcedced19.github.io%2Fhome%2F">Partager sur Facebook</a></p>
-				<p>Cedced19 - <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons By Attribution 4.0</a></p>
+				<p>Attention c'est sans pub.<br>
+				Cedced19 - <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons By Attribution 4.0</a></p>
 		</footer>
 		<script type="text/javascript" src="js/helpers.js"></script>
 		<script type="text/javascript" src="js/store.js"></script>
