--- a/demo/countdown-page/index.html
+++ b/demo/countdown-page/index.html
@@ -23,7 +23,26 @@
 <link href="https://plus.google.com/104855167193751168501/" rel="publisher" />
 <meta name="description" content="Un site avec un compte à rebour." />
 
-<link href="s.css" rel="stylesheet"> 
+<style>
+* { margin:0; padding:0; }
+#center { 
+	height:100%; 
+	width:100%;
+/*	float: left;*/
+	background-image:url('background.png'); 
+	background-position: center;
+	font-family: "Candara", serif; 
+	color:#fff;
+	text-align:center;
+	display:table;
+	font-size:50px;
+	padding:15px;
+}
+div { text-align:center; }
+
+
+.cache{ background-color:#000; position:absolute; cursor:pointer; width:100%; }
+</style>
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="countdown.js"></script>
 <script type="text/javascript">
