--- a/home/index.html
+++ b/home/index.html
@@ -45,7 +45,7 @@
 		</section>
 		<footer id="info">
 				<p><a href="http://twitter.com/share?url=http://cedced19.github.io/home/&text=Home C by @cedced19 :">Partager sur Twitter</a><br>
-				<a href="https://plus.google.com/share?url=http%3A%2F%2Fcedced19.github.io%2Fhomr%2F&hl=fr">Partager sur Google +</a><br>
+				<a href="https://plus.google.com/share?url=http%3A%2F%2Fcedced19.github.io%2Fhome%2F&hl=fr">Partager sur Google +</a><br>
 				<a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fcedced19.github.io%2Fhome%2F">Partager sur Facebook</a></p>
 				<p>Attention c'est sans pub.<br>
 				Cedced19 - License <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a></p>
