--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@ layout: default
 meta-title: Cedced19
 
 title: 404
-subtitle: Oups. <a href="/" rel="home">Acceuille ?</a>
+subtitle: Oups. <a href="/" rel="home">Acceuil ?</a>
 
 contrast:
 
