--- a/logo.html
+++ b/logo.html
@@ -5,9 +5,7 @@
     <title>Logo</title>
   </head>
   <body>
-
-    <canvas id="canvas" width="150" height="150">
-    </canvas>
+  <canvas id="canvas" width="150" height="150"></canvas>
 
     <script type="text/javascript">
 
