--- a/latin/all/index.html
+++ b/latin/all/index.html
@@ -6,7 +6,7 @@
 <link href="../s.css" rel="stylesheet">
 <link rel="shortcut icon" type="image/x-icon" href="http://cedced19.github.io/img/favicon.ico" />
 <link rel="icon" type="image/x-icon" href="http://cedced19.github.io/img/favicon.ico" />
-<script src="http://cedced19.github.io/scripts/jquery.min.js"></script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script type="text/javascript" src="http://cedced19.github.io/scripts/jquery.min.js"></script>
 <script type="text/javascript">
 (function($){
