--- a/demo/countdown-page/index.html
+++ b/demo/countdown-page/index.html
@@ -43,7 +43,7 @@ div { text-align:center; }
 
 .cache{ background-color:#000; position:absolute; cursor:pointer; width:100%; }
 </style>
-<script type="text/javascript" src="jquery.js"></script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script type="text/javascript" src="countdown.js"></script>
 <script type="text/javascript">
 $(function () {
