--- a/demo/birthday-page/index.html
+++ b/demo/birthday-page/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet"  href="style.css" />
 		<link rel="shortcut icon" type="image/x-icon" href="http://cedced19.github.io/img/favicon.ico" />
     		<link rel="icon" type="image/x-icon" href="http://cedced19.github.io/img/favicon.ico" />
-    		<script src="bootstrap/js/jquery.js"></script>
+    		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="bootstrap/js/bootstrap.min.js"></script>
 		
 		<meta name="twitter:cars" content="summary" />
