--- a/demo/download-page/index.html
+++ b/demo/download-page/index.html
@@ -35,7 +35,7 @@
         	<link rel="icon" type="image/x-icon" href="http://cedced19.github.io/img/favicon.ico" />
 		
 		<!-- Javascripts -->
-		<script src="js/jquery-1.9.1.min.js"></script>
+		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		
     </head>
