--- a/proto/index.html
+++ b/proto/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,7 +23,6 @@
 	<meta name="description" content="Un site pour coder en html/css !" />
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="s.css">
-
 </head>
 <body>
 
@@ -71,8 +70,8 @@ Exemple CSS:
 	</div>
 
 </body>
-<script src="http://cedced19.github.io/scripts/jquery.min.js"></script>
-<script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script type="text/javascript">
 (function() {
 	var	contents = $('iframe').contents(),
 		head = contents.find('head'),
@@ -91,7 +90,7 @@ Exemple CSS:
 
 })();
 </script>
-<script>
+<script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
