--- a/demo/birthday-page/index.html
+++ b/demo/birthday-page/index.html
@@ -6,8 +6,7 @@
 		<title>Happy Birthday</title>
 		<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet"  href="style.css" />
-		<link rel="shortcut icon" type="image/x-icon" href="http://cedced19.github.io/img/favicon.ico" />
-    		<link rel="icon" type="image/x-icon" href="http://cedced19.github.io/img/favicon.ico" />
+		<link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
     		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="bootstrap/js/bootstrap.min.js"></script>
 		
