--- a/demo/download-page/index.html
+++ b/demo/download-page/index.html
@@ -31,8 +31,7 @@
 		<link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
 		<link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
 		<link href="css/style.css" rel="stylesheet">
-		<link rel="shortcut icon" type="image/x-icon" href="http://cedced19.github.io/img/favicon.ico" />
-        	<link rel="icon" type="image/x-icon" href="http://cedced19.github.io/img/favicon.ico" />
+		<link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
 		
 		<!-- Javascripts -->
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
