--- a/demo/html5-page/index.html
+++ b/demo/html5-page/index.html
@@ -11,8 +11,7 @@
 		var __adobewebfontsappname__="dreamweaver"
 		</script>
 		<script src="http://use.edgefonts.net/bad-script:n4:default.js" type="text/javascript"></script>
-		<link rel="shortcut icon" type="image/x-icon" href="http://cedced19.github.io/img/favicon.ico" />
-		<link rel="icon" type="image/x-icon" href="http://cedced19.github.io/img/favicon.ico" />
+		<link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
 		
 		<meta name="twitter:cars" content="summary" />
 		<meta name="twitter:title" content="HTML ?" />
