--- a/demo/paper-page/index.html
+++ b/demo/paper-page/index.html
@@ -5,8 +5,7 @@
 		<meta name="robots" content="noindex,nofollow">
 		<title>Feuilles</title>
 		<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-		<link rel="shortcut icon" type="image/x-icon" href="http://cedced19.github.io/img/favicon.ico" />
-    		<link rel="icon" type="image/x-icon" href="http://cedced19.github.io/img/favicon.ico" />
+		<link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
 		<link rel="stylesheet"  href="s.css" />
 		<script src="http://use.edgefonts.net/bad-script:n4:default.js" type="text/javascript"></script>
 		<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend
