--- a/proto/index.html
+++ b/proto/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Prototype</title>
-	<link rel="shortcut icon" href="http://cedced19.github.io/img/favicon.ico">
+	<link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<meta name="twitter:cars" content="summary" />
 	<meta name="twitter:title" content="Prototype" />
 	<meta name="twitter:image" content="http://cedced19.github.io/profile.png" />
