--- a/home/index.html
+++ b/home/index.html
@@ -4,8 +4,7 @@
 		<meta charset="utf-8">
 		<title>Home C</title>
 		<link rel="stylesheet" href="s.css">
-		<link rel="shortcut icon" href="http://cedced19.github.io/img/favicon.ico" type="image/x-icon" />
-        	<link rel="icon" href="http://cedced19.github.io/img/favicon.ico" type="image/x-icon" />
+		<link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	</head>
 	<body>
 		<a href="https://mail.google.com" >Gmail</a>
