--- a/demo/html5-page/index.html
+++ b/demo/html5-page/index.html
@@ -1,41 +1,39 @@
 <!doctype html>
 <html>
-  
+
   <head>
 		<meta charset="utf-8">
 		<title>HTML ?</title>
-		<link href="styles/main.css" rel="stylesheet" type="text/css">
-		<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend
-		that you do not modify it.-->
+		<link href="main.css" rel="stylesheet"  media="screen" type="text/css">
 		<script>
 		var __adobewebfontsappname__="dreamweaver"
 		</script>
 		<script src="http://use.edgefonts.net/bad-script:n4:default.js" type="text/javascript"></script>
 		<link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
-		
+
 		<meta name="twitter:cars" content="summary" />
 		<meta name="twitter:title" content="HTML ?" />
 		<meta name="twitter:image" content="http://cedced19.github.io/profile.png" />
 		<meta name="twitter:site" content="@cedced19" />
 		<meta name="twitter:author" content="@cedced19" />
 		<meta name="twitter:description" content="Un site avec un beau css." />
-		
+
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="HTML ?" />
 		<meta property="og:image" content="http://cedced19.github.io/profile.png" />
 		<meta property="og:language" content="fr_FR">
 		<meta property="og:url" content="http://cedced19.github.io/demo/html5-page/" />
 		<meta property="og:description" content="Un site avec un beau css." />
-		        
+
 		<link href="https://plus.google.com/104855167193751168501/" rel="publisher" />
 		<meta name="description" content="Un site avec un beau css." />
   </head>
-  
+
   <body>
     <div id="wrapper">
       <header id="top">
         <h1>C'est quoi l'HTML ?</h1>
-        <img src="script.jpg" alt="">
+        <div id="center"><img src="script.jpg" alt=""></div>
         </nav>
       </header>
       <div id="hero"></div>
@@ -55,7 +53,7 @@
           plus complexes, des améliorations sur les formulaires, etc. Mais surtout, cette version permet pour la première fois d'exploiter
           des feuilles de style, notre fameux CSS !</p>
         <p>
-          <img src="html5.jpg" alt="" />
+          <div id="center"><img src="html5.jpg" alt="" /></div>
         </p>
         <p>HTML 5 : c'est LA dernière version. Encore assez peu répandue, elle fait beaucoup parler d'elle car elle apporte de nombreuses
           améliorations comme la possibilité d'inclure facilement des vidéos, un meilleur agencement du contenu, de nouvelles fonctionnalités
@@ -63,40 +61,39 @@
         </p>
       </article>
       <br>
-      <aside id="sidebar">
+      <div id="sidebar">
         <article id="one">
-          <h2>Le W3C</h2>
+          <h2> Le W3C</h2>
           <p>Le World Wide Web Consortium, abrégé par le sigle W3C, est un organisme de normalisation à but non lucratif, fondé en octobre
             1994 chargé de promouvoir la compatibilité des technologies du World Wide Web telles que HTML, XHTML, XML, RDF, SPARQL, CSS,
             PNG, SVG et SOAP. Fonctionnant comme un consortium international, il regroupe au 26 février 2013, 383 entreprises partenaires.</p>
         </article>
         <br>
         <article id="two">
-          <h2>XHTML vs HTML :</h2>
+          <h2> XHTML vs HTML :</h2>
           <p>Le développement du HTML est officiellement abandonné en 2000 au profit de XHTML. Cependant, en 2004,le WHATWG a pour but
             de relancer le développement du format HTML et de répondre aux nouveaux besoins sur une base technologique jugée plus aisément
             implémentable que celle du XHTML 2.0 en cours de conception. Finalement le HTML est repris par le W3C.</p>
         </article>
         <br>
         <article id="three">
-          <h2>Le CSS</h2>
+          <h2> Le CSS</h2>
           <p>CSS (Cascading Style Sheets : feuilles de style en cascade) est un langage informatique qui sert à décrire la présentation
             des documents HTML et XML. Les standards définissant CSS sont publiés par le W3C. Introduit en 1998, CSS devient couramment
             utilisé dans la conception de sites web et bien pris en charge par les navigateurs web dans les années 2000.</p>
         </article>
-      </aside>
+      </div>
       <footer>Cedced19, 2013</footer>
     </div>
-		<script type="text/javascript" >
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <script type="text/javascript" >
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+   ga('create', 'UA-49736522-1', 'cedced19.github.io');
+   ga('send', 'pageview');
+    </script>
 
-		  ga('create', 'UA-49736522-1', 'cedced19.github.io');
-		  ga('send', 'pageview');
-
-		</script>
   </body>
 
 </html>
