--- a/demo/github-repo/index.html
+++ b/demo/github-repo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cedced19 | Project</title>
+    <title>Project | Cedced19</title>
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
     <!--
         This document is a modified version of http://twitter.github.io
