--- a/proto/index.html
+++ b/proto/index.html
@@ -61,7 +61,7 @@ Exemple CSS:
 	</section>
 	<br><br>
 	   <div class="island social">
-                <a data-tip="&hearts;" class="bttnt tweet" href="http://twitter.com/share?url=http://cedced19.github.io/proto/&text=Latin by @cedced19 :"><img src="birdy.png" width="50" height="50" /></a>
+                <a data-tip="&hearts;" class="bttnt tweet" href="http://twitter.com/share?url=http://cedced19.github.io/proto/&text=Prototype by @cedced19 :"><img src="birdy.png" width="50" height="50" /></a>
                 <a data-tip="&hearts;" class="bttng google" href="https://plus.google.com/share?url=http%3A%2F%2Fcedced19.github.io%2Fproto%2F&hl=fr"><img src="google.png" width="50" height="50" /></a>
                 <a data-tip="&hearts;" class="bttnf facebook" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fcedced19.github.io%2Fproto%2F"><img src="facebook.png" width="50" height="50" /></a>
                </div>
