--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@ layout: default
 meta-title: Cedced19
 
 title: 404
-subtitle: Oups. <a href="/" rel="home">Acceuil ?</a> <a href="https://github.com/cedced19/iced/blob/master/setup/iced-setup.exe?raw=true" class=​"btn">​Téléchargement​</a>
+subtitle: Oups. <a href="/" rel="home">Acceuil ?</a>
 
 contrast:
 
