--- a/home/index.html
+++ b/home/index.html
@@ -140,19 +140,15 @@
 			</footer>
 		</section>
 		<footer id="info">
-				<p><a href="http://twitter.com/share?url=http://cedced19.github.io/home/&text=Home C by @cedced19 :">Partager sur Twitter</a><br>
-				<a href="https://plus.google.com/share?url=http%3A%2F%2Fcedced19.github.io%2Fhome%2F&hl=fr">Partager sur Google +</a><br>
-				<a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fcedced19.github.io%2Fhome%2F">Partager sur Facebook</a></p>
-				<p>Attention c'est sans pub.<br>
-				Cedced19 - License <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a></p>
+				Cedced19 - License <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
 		</footer>
-                          <script type="text/javascript" src="js/helpers.js"></script>
-                          <script type="text/javascript" src="js/store.js"></script>
-                          <script type="text/javascript" src="js/model.js"></script>
-                          <script type="text/javascript" src="js/template.js"></script>
-                          <script type="text/javascript" src="js/view.js"></script>
-                          <script type="text/javascript" src="js/controller.js"></script>
-                          <script type="text/javascript" src="js/app.js"></script>
+                <script type="text/javascript" src="js/helpers.js"></script>
+                <script type="text/javascript" src="js/store.js"></script>
+                <script type="text/javascript" src="js/model.js"></script>
+                <script type="text/javascript" src="js/template.js"></script>
+                <script type="text/javascript" src="js/view.js"></script>
+                <script type="text/javascript" src="js/controller.js"></script>
+                <script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript">
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
