--- a/demo/countdown-page/index.html
+++ b/demo/countdown-page/index.html
@@ -44,11 +44,10 @@ div { text-align:center; }
 </head>
 <body>
 	<div class="block" id="center">
-		<span style="display:table-cell; vertical-align:middle; text-align:center;">
+		<div style="display:table-cell; vertical-align:middle; text-align:center;">
                                 <span id="countdown" style="text-align:center;">
                                 <span class="bloc" id="days"></span>, <span class="bloc" id="hours"></span>,<span class="bloc" id="minutes"></span> et <span class="bloc" id="seconds"></span> avant mon anniversaire !
-                                </span>
-                        </span>
+                 </div>
 	</div>
             <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
             <script type="text/javascript">
