--- a/demo/countdown-page/index.html
+++ b/demo/countdown-page/index.html
@@ -27,7 +27,7 @@
 #center {
 	height:100%;
 	width:100%;
-	background-image:url('background.png');
+	background-color:#e74c3c;
 	background-position: center;
 	font-family: "Candara", serif;
 	color:#fff;
