--- a/demo/countdown-page/index.html
+++ b/demo/countdown-page/index.html
@@ -24,7 +24,7 @@
 
 <style>
 * { margin:0; padding:0; }
-#center {
+body {
 	height:100%;
 	width:100%;
 	background-color:#e74c3c;
@@ -43,13 +43,11 @@ div { text-align:center; }
 </style>
 </head>
 <body>
-	<div class="block" id="center">
 		<div style="display:table-cell; vertical-align:middle; text-align:center;">
                                 <span id="countdown" style="text-align:center;">
                                 	<span class="bloc" id="days"></span>, <span class="bloc" id="hours"></span>,<span class="bloc" id="minutes"></span> et <span class="bloc" id="seconds"></span> avant mon anniversaire !
                                 </span>
                  </div>
-	</div>
             <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
             <script type="text/javascript">
                 (function($){
