--- a/demo/countdown-page/index.html
+++ b/demo/countdown-page/index.html
@@ -36,6 +36,8 @@ body {
 	font-size:65px;
 	padding:15px;
 	text-align:center;
+	display:table-cell; 
+	vertical-align:middle;
 }
 </style>
 </head>
