--- a/demo/countdown-page/index.html
+++ b/demo/countdown-page/index.html
@@ -25,6 +25,8 @@
 <style>
 * { margin:0; padding:0; }
 body {
+	width:100%;
+	height:100%;
 	background-color:#e74c3c;
 	background-position: center;
 	font-family: "Candara", serif;
